--- a/style.css
+++ b/style.css
@@ -89,3 +89,12 @@ a {
 	height: 250px;
 	margin-bottom: 25px;
 }
+
+.event-table {
+	width: 50%;
+	margin-left: 400px;
+	height: 500px;
+	background-color: silver;
+	align-items: center;
+
+}
